LiveText-LiveText3.14/src/objects/SMS_Text__c.object
<CustomObject>
    <description>SMS Text</description>
    <fields>
        <fullName>Conversation_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conversation Header</label>
        <referenceTo>Conversation_Header__c</referenceTo>
        <relationshipLabel>SMS Texts (Conversation Header)</relationshipLabel>
        <relationshipName>SMS_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Chat_Message__c</fullName>
        <formula>Support_Number__r.Chat_End_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Chat Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Originating_Number__c</fullName>
        <formula>IF(LEFT(Originating_Number__c,2)==&apos;+1&apos;, LEFT(Originating_Number__c, 2)+&apos; (&apos;+MID(Originating_Number__c,3,3)+&apos;) &apos;+MID(Originating_Number__c,6,3)+&apos;-&apos;+RIGHT(Originating_Number__c,4), &apos;+1&apos;+&apos; (&apos;+LEFT(Originating_Number__c,3)+&apos;) &apos;+MID(Originating_Number__c,4,3)+&apos;-&apos;+RIGHT(Originating_Number__c,4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Originating Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Message__c</fullName>
        <formula>Support_Number__r.Initial_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>480</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Originating_Number__c</fullName>
        <description>Originating Number</description>
        <label>Originating Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LiveText</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Number</label>
        <referenceTo>LiveText_Number__c</referenceTo>
        <relationshipLabel>SMS Texts (Support Number)</relationshipLabel>
        <relationshipName>SMS_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_SMS__c</fullName>
        <label>Unique SMS</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SMS Text</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conversation_Header__c</columns>
        <columns>Originating_Number__c</columns>
        <columns>Source__c</columns>
        <columns>Support_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{0000}</displayFormat>
        <label>SMS Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>